--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "express-rate-limit": "^6.8.0",
     "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
+    "http": "^0.0.1-security",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.5",
