--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "concurrently": "^8.0.1",
     "cookie": "^0.6.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "datauri": "^4.1.0",
     "dayjs": "^1.11.9",
     "dotenv": "^16.0.3",
